--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +13,9 @@
 <body>
 
     <header>
-      <h1>Tienda <span>Muebles</span></h1>  
+        <h1>Tienda <span>Muebles</span></h1>
     </header>
-    
+
     <nav>
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
@@ -24,7 +25,167 @@
         <a href="contacto.html">Contacto</a>
     </nav>
 
-    <section></section>
-   
+    <section>
+        <h2>Categorías de <span> Productos </span></h2>
+
+        <div>
+            <img src="/img/categoria1.jpg" alt="Categoria 1">
+            <a href="#">Oficina</a>
+        </div>
+
+        <div>
+            <img src="/img/categoria2.jpg" alt="Categoria 2">
+            <a href="#">Hogar</a>
+        </div>
+
+        <div>
+            <img src="/img/categoria3.jpg" alt="Categoria 3">
+            <a href="#">Cocina</a>
+        </div>
+
+    </section>
+
+    <section>
+        <div>
+            <h2>Sobre nosotros</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quaerat officiis unde? Voluptate non,
+                atque delectus omnis quos iusto impedit consequuntur ad nisi ducimus beatae perspiciatis culpa, quam
+                ipsam! Temporibus?</p>
+        </div>
+    </section>
+
+    <main>
+        <h2>Nuestros Productos</h2>
+
+        <!-- Listado de productos -->
+        <div>
+
+            <!-- Producto 1 -->
+            <div>
+                <img src="/img/producto1.jpg" alt="Producto 1">
+            </div>
+            <div>
+                <h3>Producto 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ex dolores deleniti itaque.</p>
+                <p>$1,000.00</p>
+
+                <a href="#">Agregar al carrito</a>
+            </div>
+
+            <!-- Producto 2 -->
+            <div>
+                <div>
+                    <img src="/img/producto2.jpg" alt="Producto 2">
+                </div>
+                <div>
+                    <h3>Producto 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ex dolores deleniti itaque.</p>
+                    <p>$1,500.00</p>
+
+                    <a href="#">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <!-- Producto 3 -->
+            <div>
+                <div>
+                    <img src="/img/producto3.jpg" alt="Producto 3">
+                </div>
+                <div>
+                    <h3>Producto 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ex dolores deleniti itaque.</p>
+                    <p>$2,500.00</p>
+
+                    <a href="#">Agregar al carrito</a>
+                </div>
+            </div>
+    
+        <!-- Producto 4 -->
+        <div>
+            <div>
+                <img src="/img/producto4.jpg" alt="Producto 4">
+            </div>
+            <div>
+                <h3>Producto 4</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ex dolores deleniti itaque.</p>
+                <p>$4,700.00</p>
+
+                <a href="#">Agregar al carrito</a>
+            </div>
+        </div>
+
+        <!-- Producto 5 -->
+        <div>
+            <div>
+                <img src="/img/producto5.jpg" alt="Producto 5">
+            </div>
+            <div>
+                <h3>Producto 5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ex dolores deleniti itaque.</p>
+                <p>$2,500.00</p>
+
+                <a href="#">Agregar al carrito</a>
+            </div>
+        </div>
+
+        <!-- Producto 6 -->
+        <div>
+            <div>
+                <img src="/img/producto6.jpg" alt="Producto 6">
+            </div>
+            <div>
+                <h3>Producto 6</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ex dolores deleniti itaque.</p>
+                <p>$8,500.00</p>
+
+                <a href="#">Agregar al carrito</a>
+            </div>
+        </div>
+
+        </div>
+    </main>
+
+    <footer>
+
+        <div>
+            <h3>Categorías</h3>
+
+            <nav>
+                <a href="#">Cocina</a>
+                <a href="#">Oficina</a>
+                <a href="#">Jardín</a>
+                <a href="#">Cochera</a>
+                <a href="#">Dormitorios</a>
+            </nav>
+        </div>
+
+        <div>
+            <h3>Sobre nosotros</h3>
+
+            <nav>
+                <a href="#">Nuestra Historia</a>
+                <a href="#">Misión, Visión y Valores</a>
+                <a href="#">Carreras</a>
+                <a href="#">Políticas de Privacidad</a>
+                <a href="#">Términos del servicio</a>
+            </nav>
+        </div>
+
+        <div>
+            <h3>Soporte</h3>
+
+            <nav>
+                <a href="#">Preguntas Frecuentes</a>
+                <a href="#">Ayuda en línea</a>
+                <a href="#">Confianza y seguridad</a>
+                <a href="#">Cochera</a>
+                <a href="#">Dormitorios</a>
+            </nav>
+        </div>
+
+        <p>Todos los derechos reversados </p>
+    </footer>
+
 </body>
+
 </html>
