Añadiendo estilos en css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
     <header>
-        <h1>Tienda <span>Muebles</span></h1>
+        <h1 class="nombre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav>
+    <nav class="navegacion">
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
@@ -162,7 +162,7 @@
         <div>
             <h3>Sobre nosotros</h3>
 
-            <nav>
+            <nav class="navegacion">
                 <a href="#">Nuestra Historia</a>
                 <a href="#">Misión, Visión y Valores</a>
                 <a href="#">Carreras</a>
