--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     </section>
 
-    <section>
+    <section class="sobre-nosotros">
         <div>
             <h2>Sobre nosotros</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quaerat officiis unde? Voluptate non,
