--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce </title>
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/app.css">
+
 
 </head>
 
@@ -16,7 +18,7 @@
         <h1 class="nombre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav class="navegacion">
+    <nav class="nav-principal">
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
